# webcpp

./: .clangd  .dockerignore  AboutPage.cc  AboutPage.h  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json  config1.json  cont.sql  docker-compose.yml  main.cc  messages?page=1&limit=5  roughwork.txt
.github/workflows/: docker-image.yml
controllers/: AboutPageCtrl.cc  AboutPageCtrl.h  ApiMessagesCtrl.cc  ApiMessagesCtrl.h  AuthCtrl.cc  AuthCtrl.h  ContactsPageCtrl.cc  ContactsPageCtrl.h  HomePageCtrl.cc  HomePageCtrl.h  ServicesPageCtrl.cc  ServicesPageCtrl.h  test_ctrl.cc  test_ctrl.h
controllers/APIs/: ApiMessagesCtrl.cc  ApiMessagesCtrl.h
filters/: CsrfFilter.cc  CsrfFilter.h  filter.cpp
plugins/: plugin.cpp
static/css/: login.css  register.css  style.css  styles.css
static/js/: app.js  authy.js
test/: CMakeLists.txt
views/: AboutPage.csp  ContactsPage.cc  ContactsPage.csp  ContactsPage.h  HomePage.cc  HomePage.csp  ListParams.csp  ServicesPage.csp  login.cc  login.csp  registration.cc  registration.csp  registration.h
